fix fixed bar overlapping on scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,8 @@ nav {
   background: red;
   position: fixed;
   top: 0;
+
+  
   
 }
 
@@ -44,17 +46,14 @@ main {
   display: flex;
   align-items: center;
   flex-direction: column;
+  
 }
 section {
   width: 70%;
   height: 80vh;
   margin: 5em;
+   scroll-margin-top: 5em; /*fix for fixed bar not overlapping  */
   box-shadow: 10px 10px 5px 5px rgba(0, 0, 0, 0.4);
   border: black solid 2px;
 }
-
-.section {
-    scroll-margin-top: 5em;
-}
-
 
